# estruturas-de-dados-I

./: .gitignore  README.md  relatorios
trab1/: main  main.c
trab1/includes/: file.h  list.h  menu.h  node.h  person.h  system.h
trab1/linked-list/: main  main.c
trab1/linked-list/includes/: system.h
trab1/linked-list/src/: file.c  list.c  person.c  system.c
trab1/lists/: main.cpp
trab1/lists/includes/: list.hpp  system.hpp
trab1/lists/linked-list/: main.cpp
trab1/lists/src/: system.cpp
trab1/sequential-list/: main  main.c
trab1/sequential-list/includes/: file.h  list.h  person.h  system.h
trab1/sequential-list/src/: file.c  list.c  person.c  system.c
trab1/src/: file.c  list.c  menu.c  node.c  person.c  system.c
trabalho-listas/: README.md
trabalho-listas/lists/: Makefile  main
trabalho-listas/lists/includes/: system.hpp
trabalho-ordenacao/: CMakeLists.txt  Makefile  main.cpp
trabalho-ordenacao/common/includes/: person.hpp
trabalho-ordenacao/includes/: system.hpp
trabalho-ordenacao/sequential-list/includes/: sequential-list.hpp
trabalho-ordenacao/sequential-list/src/: sequential-list.cpp
trabalho-ordenacao/src/: search.cpp  sorts.cpp  system.cpp
trabalho-strings/: CMakeLists.txt  Historia.txt  Makefile  main.cpp
trabalho-strings/includes/: String.hpp  decoder.hpp  encoder.hpp  frequency.hpp  huffman_tree.hpp  ocorrencia.hpp  sequential-list.hpp  sorts.hpp  system.hpp
trabalho-strings/src/: String.cpp  encoder.cpp  frequency.cpp  huffman_tree.cpp  ocorrencia.cpp  ocorrencias.cpp  system.cpp
(+19 files in other folders)
